--- a/style.css
+++ b/style.css
@@ -1,26 +1,22 @@
+@import url("/styles/header.css");
+@import url("/styles/banner.css");
+@import url("/styles/carrosel.css");
+@import url("/styles/topicos.css");
+@import url("/styles/contato.css");
+@import url("/styles/rodape.css");
+
 :root {
     --color-fundo: #ebecee;
+    --branco: #ffffff;
+    --laranja: #EB9B00;
+    --azul-degrade: linear-gradient(98deg, #002F52 35.49%, #326589 165.37%);
+    --fonte-princiapl: 'Poppins';
+    --azul: #002f52;
 }
 
 body {
     background-color: var(--color-fundo);
-}
-
-.cabecalho {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    height: 5em;
-}
-
-.icons__lado__esquerdo {
-    display: flex;
-    align-items: center;
-    gap: 2em;
-}
-
-.icons__lado__direito {
-    display: flex;
-    align-items: center;
-    gap: 1em;
+    font-family: 'Poppins', sans-serif;
+    font-size: 1rem;
+    font-weight: 400;
 }
