--- a/styles/banner.css
+++ b/styles/banner.css
@@ -34,3 +34,32 @@
     background: url("/assets/Lupa.svg") no-repeat;
     background-position: 1em;
 }
+
+@media screen and (min-width: 1024px )  {
+    
+    .banner__titulo {
+        font-size: 2.25rem;
+        font-weight: 700;
+    }
+
+    .banner__texto {
+        font-size: 1rem;
+        font-weight: 500;
+        margin: 2em 0;
+    }
+
+    .banner__pesquisa::placeholder {
+        font-size: 1rem;
+        font-weight: 400;
+    }
+
+
+    .banner__pesquisa {
+        width: 50%;
+        padding: 1.5em;
+    }
+
+    .banner {
+        padding: 6.5em 4em;
+    }
+}
