--- a/styles/carrosel.css
+++ b/styles/carrosel.css
@@ -19,7 +19,7 @@
 
 .swiper-pagination {
     position: initial;
-    margin: .5em 0;
+    margin: 0.5em 0;
 }
 
 .card__descrição {
@@ -72,4 +72,34 @@
     color: var(--branco);
     font-weight: 700;
     text-decoration: none;
+}
+
+@media screen and (min-width: 1024px){
+    
+    .carrossel__titulo {
+        font-size: 1.65rem;
+        font-weight: 700;
+        padding: 2em 0 1em 0;
+    }
+
+    .swiper-pagination {
+        margin: 2em 0 3em 0;
+    }
+
+    .swiper {
+        width: 65%;
+    }
+
+    .swiper-button-prev,
+    .swiper-button-next {
+        display: block;
+        top: 60%;
+    }
+
+    .card {
+        width: 50%;
+        margin: 2em auto 2em auto;
+    }
+
+
 }
