--- a/styles/rodape.css
+++ b/styles/rodape.css
@@ -12,3 +12,36 @@ hr {
     font-weight: 400;
 }
 
+@media screen and (min-width: 1024px){
+
+    .radapé__titulo {
+        font-size: 24px;
+        font-weight: 400;
+    }
+    .rodapé {
+        display: flex;
+        padding-top: 3em;
+        justify-content: space-around;
+    }
+
+    .educacao__curso{
+        display: flex;
+        align-items: center;
+        gap: 8px;
+        margin: 0 0 10px 0;
+    }
+
+    .rodapé__link {
+        color: var(--cor-cinza);
+        text-decoration: none;
+        font-size: 14px;
+        font-weight: 400;
+    }
+
+    .rodapé__subtitulo {
+        color: var(--cor-titulo-rodape);
+        font-size: 14px;
+        font-weight: 400;
+        margin-bottom: 25px;
+    }
+}
