--- a/styles/topicos.css
+++ b/styles/topicos.css
@@ -28,3 +28,20 @@
     margin: 2em 0.5em;
 }
 
+@media screen and (min-width: 1024px){
+    
+    .tópicos__titulo {
+        font-size: 24px;
+        font-weight: 300;
+    }
+
+    .tópicos__link {
+        font-size: 24px;
+        font-weight: 700;
+    }
+
+    .tópicos {
+        height: 320px;
+    }
+
+}
