versão final do projeto mobile-first

--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@
     --font-secundaria: 'Josefin Sans';
     --cor-cinza: #474646;
     --cor-titulo-rodape: #858585;
+    --preto: #000;
 }
 
 body {
