--- a/styles/banner.css
+++ b/styles/banner.css
@@ -63,3 +63,13 @@
         padding: 6.5em 4em;
     }
 }
+
+@media screen and (min-width:1728px){
+    .banner__pesquisa {
+        width: 35%;
+    }
+
+    .banner__pesquisa::placeholder {
+        background-position: 5em;
+    }
+}
