--- a/styles/header.css
+++ b/styles/header.css
@@ -37,6 +37,14 @@
     display: block;
 }
 
+.container__botao:checked~.container__rotulo > .cabecalho__menu__hambuguer{
+    background-image: url("/assets/MenuAberto.svg");
+}
+
+.container__botao:checked~ .container__rotulo {
+    background: var(--azul-degrade);
+}
+
 .container__botao {
     display: none;
 }
@@ -68,12 +76,16 @@
     display: none;
 }
 
+.container__texto {
+    display: none;
+}
 @media screen and ( min-width: 1024px) {
 
     .cabecalho__menu__hambuguer,
     .container__image--favoritos{
         display: none;
     }
+
 
     .container__titulo {
         padding: 0.2em 0 0 0;
@@ -113,6 +125,47 @@
         display: none;
     }
 
+    .opções-botão:checked~.opções__rotulo>.container__itens{
+        background: var(--azul-degrade);
+        color: var(--branco);
+    }
 
+    .container__itens {
+        padding: 2em 1em;
+    }
+
+    .lista-menu__item:hover {
+        background: var(--azul-degrade);
+    }
+    
+    .lista-menu__item:hover>.lista-menu__link {
+        -webkit-text-fill-color: var(--branco);
+        text-decoration: none;
+    }
+
+}
+
+@media screen and (min-width: 1728px) {
+    
+    .container__texto {
+        display: block;
+    }
+
+    .container__link {
+        display: flex;
+        align-items: center;
+        text-decoration: none;
+        justify-content: center;
+        font-size: 20px;
+        color: var(--preto);
+    }
+
+    .container {
+        padding: 0 3em 0 3em;
+    }
+
+    .container__opções {
+        margin-right: auto;
+    }
 }
     
